# gpt-oss-typescript

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: dapt_train.yaml  github_collection.yaml  nemo_eval.yaml  repo_tasks.yaml  sft_data.yaml  simple_chat.jinja
docker/: Dockerfile.eval  Dockerfile.train  Dockerfile.vllm  docker-compose.yml
scripts/: apply_agentic_sft_dataset.py  build_dapt_corpus.py  collect_github_repos.py  run_dapt_train.py  run_nemo_eval.sh  run_swe_bench_eval.sh  serve_vllm.sh  setup_env.sh  system_info.sh  test_checkpoint.py
src/common/: logging.py  paths.py  subprocess_utils.py
src/data/corpus/: __init__.py  chunking.py  dedupe.py  pack_jsonl.py  sanitize.py
src/data/github/: __init__.py  github_client.py
src/eval/: nemo_eval_runner.py  swe_bench_ts.py
src/train/dapt/: data_collator.py  train_hf_peft.py  train_unsloth.py
src/train/sft/: format_agentic.py
tests/: test_corpus_builder.py  test_github_collector.py
